--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "redoc-express": "^2.1.0",
+    "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   },
   "name": "configs",
